fix. show tooltip only if text overflowed

--- a/src/components/AppCard/AppCard.scss
+++ b/src/components/AppCard/AppCard.scss
@@ -35,7 +35,6 @@
     overflow-x: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    cursor: pointer;
   }
 
   &_tooltip {
