--- a/src/index.scss
+++ b/src/index.scss
@@ -18,3 +18,7 @@ h1 {
   line-height: 1.1;
   text-align: center;
 }
+
+.cursor-pointer {
+  cursor: pointer;
+}
